<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="627dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="415dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:text="@string/txt"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent "
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:textColor="#F44336"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:text="@string/btn1"
                android:textAllCaps="false"
                app:rippleColor="#B23B3B" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:textColor="#F44336"
                android:gravity="center"
                android:text="@string/btn2"
                android:textAllCaps="false"
                app:rippleColor="#B23B3B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="ExtraText">


            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:textColor="#F44336"
                android:gravity="center"
                android:text="@string/btn3"
                android:layout_margin="30dp"
                android:textAllCaps="false"
                app:rippleColor="#B23B3B" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:layout_margin="30dp"
                android:textColor="#F44336"
                android:text="@string/btn4"
                android:textAllCaps="false"
                app:rippleColor="#B23B3B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:layout_margin="30dp"
                android:text="@string/btn5"
                android:textColor="#F44336"
                android:textAllCaps="false"
                app:rippleColor="#B23B3B" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:layout_margin="30dp"
                android:text="@string/btn6"
                android:textColor="#F44336"
                android:textAllCaps="false"
                app:rippleColor="#B23B3B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"

            android:orientation="horizontal">


            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:text="@string/btn7"
                android:layout_margin="30dp"
                android:textAllCaps="false"
                android:textColorHint="#FFFFFF"
                android:textColor="#F44336"
                app:rippleColor="#B23B3B" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:layout_margin="30dp"
                android:text="@string/btn8"
                android:textAllCaps="false"
                android:textColor="#F44336"
                app:rippleColor="#B23B3B" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>